Fixing link spacing

--- a/ttastyle.css
+++ b/ttastyle.css
@@ -22,7 +22,7 @@ li {
 
 a.header:link, a.header:visited {
 	display: block;
-	width: 175px;
+	width: 167px;
 	font-weight: bold;
 	color: #FFFFFF;
 	background-color: #000000;
